--- a/package.json
+++ b/package.json
@@ -3,13 +3,59 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.7.0",
+    "@headlessui/react": "^1.5.0",
+    "@heroicons/react": "^1.0.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.2",
+    "classnames": "^2.3.1",
+    "emailjs": "^4.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-head": "^3.4.2",
+    "react-helmet": "^6.1.0",
+    "react-router": "^6.4.2",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^3.0.23",
+    "ts-pattern": "^4.0.3",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@next/eslint-plugin-next": "^12.1.0",
+    "@tailwindcss/forms": "^0.5.0",
+    "@tailwindcss/typography": "^0.5.2",
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.39",
+    "@types/tailwindcss": "^3.0.9",
+    "@types/webpack-env": "^1.16.3",
+    "@typescript-eslint/eslint-plugin": "^5.14.0",
+    "@typescript-eslint/parser": "^5.14.0",
+    "cssnano": "^5.1.1",
+    "eslint": "^8.10.0",
+    "eslint-config-next": "^12.1.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-module-resolver": "^1.4.0",
+    "eslint-plugin-monorepo": "^0.3.2",
+    "eslint-plugin-react": "^7.29.3",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-react-memo": "^0.0.3",
+    "eslint-plugin-react-native": "^4.0.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-sort-keys-fix": "^1.1.2",
+    "postcss": "^8.4.8",
+    "postcss-preset-env": "^7.4.2",
+    "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.8",
+    "sass": "^1.49.9",
+    "sort-package-json": "^1.54.0",
+    "stylelint": "^14.5.3",
+    "stylelint-config-recommended": "^7.0.0",
+    "stylelint-order": "^5.0.0",
+    "stylelint-prettier": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
